Unified drinksaving for beers and other alcohol types
