# api-docs.yaml
@@ -24,24 +24,6 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/SavedDrink"
-  /v1/drinks/beer/new:
-    post:
-      tags:
-      - drinks-controller
-      operationId: saveBeer
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Beer"
-        required: true
-      responses:
-        "200":
-          description: OK
-          content:
-            '*/*':
-              schema:
-                $ref: "#/components/schemas/SavedBeer"
   /v1/beer/{userId}/brands:
     post:
       tags:
@@ -337,30 +319,26 @@ components:
         alcoholVolumeId:
           type: integer
           format: int32
+        brandId:
+          type: integer
+          format: int32
+        beerFlavourId:
+          type: integer
+          format: int32
+        consumptionTypeId:
+          type: integer
+          format: int32
         comments:
           type: string
+        quantity:
+          type: integer
+          format: int32
     SavedDrink:
       type: object
       properties:
         id:
           type: integer
           format: int32
-        userId:
-          type: string
-          format: uuid
-        date:
-          type: string
-        alcoholTypeId:
-          type: integer
-          format: int32
-        alcoholVolumeId:
-          type: integer
-          format: int32
-        comments:
-          type: string
-    Beer:
-      type: object
-      properties:
         userId:
           type: string
           format: uuid
@@ -379,31 +357,6 @@ components:
           type: integer
           format: int32
         beerFlavourId:
-          type: integer
-          format: int32
-        consumptionTypeId:
-          type: integer
-          format: int32
-        comments:
-          type: string
-    SavedBeer:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int32
-        userId:
-          type: string
-          format: uuid
-        date:
-          type: string
-        alcoholTypeId:
-          type: integer
-          format: int32
-        alcoholVolumeId:
-          type: integer
-          format: int32
-        brandId:
           type: integer
           format: int32
         consumptionTypeId:
@@ -543,10 +496,16 @@ components:
         alcoholTypeId:
           type: integer
           format: int32
+        alcoholSubtypeId:
+          type: integer
+          format: int32
         alcoholVolumeId:
           type: integer
           format: int32
         brandId:
+          type: integer
+          format: int32
+        beerFlavourId:
           type: integer
           format: int32
         consumptionTypeId:
